{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 14,
  "lineage": "9c19733e-8b10-827f-4a9c-e30de9026ecd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/networkInterfaces/zeushighcharity-bstn-nic",
            "internal_domain_name_suffix": "zbeknxdmkveu1fplyplqztzmwb.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "zeushighcharity-bstn-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/publicIPAddresses/zeushighcharity-ip",
                "subnet_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-pblc-sn001"
              }
            ],
            "location": "westus",
            "name": "zeushighcharity-bstn-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "zeushighcharity-rg",
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "fireteamosiris@somedomain.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "fireteamosiris@somedomain.com",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/networkInterfaces/zeushighcharity-wrkr-nic",
            "internal_domain_name_suffix": "zbeknxdmkveu1fplyplqztzmwb.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "zeushighcharity-wrkr-nic-cfg",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-prvt-sn001"
              }
            ],
            "location": "westus",
            "name": "zeushighcharity-wrkr-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "zeushighcharity-rg",
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "fireteamosiris@somedomain.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "fireteamosiris@somedomain.com",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/networkSecurityGroups/zeushighcharity-prvt-nsg",
            "location": "westus",
            "name": "zeushighcharity-prvt-nsg",
            "resource_group_name": "zeushighcharity-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-public-subnet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "deny-internet-all",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "fireteamosiris@somedomain.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "fireteamosiris@somedomain.com",
              "tier": "Infrastructure"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/networkSecurityGroups/zeushighcharity-pblc-nsg",
            "location": "westus",
            "name": "zeushighcharity-pblc-nsg",
            "resource_group_name": "zeushighcharity-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-all",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "fireteamosiris@somedomain.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "fireteamosiris@somedomain.com",
              "tier": "Infrastructure"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/publicIPAddresses/zeushighcharity-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "zeushighcharity-ip",
            "resource_group_name": "zeushighcharity-rg",
            "sku": "Basic",
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "fireteamosiris@somedomain.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "fireteamosiris@somedomain.com",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-prvt-sn001",
            "name": "zeushighcharity-prvt-sn001",
            "resource_group_name": "zeushighcharity-rg",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.ServiceBus"
            ],
            "virtual_network_name": "zeushighcharity-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-pblc-sn001",
            "name": "zeushighcharity-pblc-sn001",
            "resource_group_name": "zeushighcharity-rg",
            "service_endpoints": [
              "Microsoft.ServiceBus",
              "Microsoft.ContainerRegistry"
            ],
            "virtual_network_name": "zeushighcharity-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-prvt-sn001",
            "network_security_group_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/networkSecurityGroups/zeushighcharity-prvt-nsg",
            "subnet_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-prvt-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.private_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-pblc-sn001",
            "network_security_group_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/networkSecurityGroups/zeushighcharity-pblc-nsg",
            "subnet_id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet/subnets/zeushighcharity-pblc-sn001"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "dca648c8-556c-4d49-95eb-c3d70ccf2cb1",
            "id": "/subscriptions/9816cde7-29a7-44b2-8cd5-206a171942a6/resourceGroups/zeushighcharity-rg/providers/Microsoft.Network/virtualNetworks/zeushighcharity-vnet",
            "location": "westus",
            "name": "zeushighcharity-vnet",
            "resource_group_name": "zeushighcharity-rg",
            "tags": {
              "application": "HighCharity",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "HighCharity Infra",
              "operatingcostcenter": "0570025003",
              "owner": "fireteamosiris@somedomain.com",
              "projectcostcenter": "0570025003",
              "securitycontact": "fireteamosiris@somedomain.com",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}